--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
+    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js",
+    "build:netlify": "npm run build && node -e \"const fs = require('fs'); fs.writeFileSync('dist/mf-shopping/_headers', '/*\\n  Access-Control-Allow-Origin: *\\n  Access-Control-Allow-Headers: Origin, X-Requested-With, Content-Type, Accept, Authorization\\n  Access-Control-Allow-Methods: GET, POST, PUT, PATCH, DELETE, OPTIONS\\n  Access-Control-Allow-Credentials: true\\n');\""
   },
   "private": true,
   "dependencies": {
